[gd_scene load_steps=6 format=3 uid="uid://cak3afmm7dpnq"]

[ext_resource type="Script" path="res://scenes/ui/edge_areas.gd" id="1_mu34h"]
[ext_resource type="Script" path="res://scenes/ui/edge_area.gd" id="2_42rr7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phcf6"]
size = Vector2(80, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eokr3"]
size = Vector2(200, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_riury"]
size = Vector2(200, 30)

[node name="EdgeAreas" type="Node2D"]
position = Vector2(144.5, 108)
script = ExtResource("1_mu34h")

[node name="WestEdgeArea" type="Area2D" parent="."]
script = ExtResource("2_42rr7")
direction = Vector2(-1, 0)
hint_text = "[center][color=#febcb8]west[/color]
the silence of a dead end deafens you[/center]"

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestEdgeArea"]
position = Vector2(-144, 0)
shape = SubResource("RectangleShape2D_phcf6")

[node name="EastEdgeArea" type="Area2D" parent="."]
script = ExtResource("2_42rr7")
direction = Vector2(1, 0)
hint_text = "[center][color=#febcb8]west[/color]
the silence[/center]"

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastEdgeArea"]
position = Vector2(144, 0)
shape = SubResource("RectangleShape2D_phcf6")

[node name="SouthEdgeArea" type="Area2D" parent="."]
script = ExtResource("2_42rr7")
direction = Vector2(0, 1)
hint_text = "[center][color=#febcb8]west[/color]
the silence of a dead end deafens you[/center]"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthEdgeArea"]
position = Vector2(0, 108)
shape = SubResource("RectangleShape2D_eokr3")

[node name="NorthEdgeArea" type="Area2D" parent="."]
script = ExtResource("2_42rr7")
direction = Vector2(0, -1)
hint_text = "[center][color=#febcb8]west[/color]
the silence [/center]"

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthEdgeArea"]
position = Vector2(0, -63)
shape = SubResource("RectangleShape2D_riury")
